--- a/HabitBuilder/HabitBuilder/Base.lproj/LaunchScreen.storyboard
+++ b/HabitBuilder/HabitBuilder/Base.lproj/LaunchScreen.storyboard
@@ -16,14 +16,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="HB logo" translatesAutoresizingMaskIntoConstraints="NO" id="gFH-cq-zTQ">
-                                <rect key="frame" x="0.0" y="278" width="414" height="341"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="HB logo" translatesAutoresizingMaskIntoConstraints="NO" id="gFH-cq-zTQ">
+                                <rect key="frame" x="36.5" y="277.5" width="341" height="341"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.49803921568627452" green="0.93333333333333335" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.27450980392156865" green="0.82745098039215681" blue="0.76470588235294112" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="gFH-cq-zTQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Q9y-am-lhV"/>
+                            <constraint firstItem="gFH-cq-zTQ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="TSB-H5-mub"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
